# Projeto-Churn-TC01

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
docs/: ml_canvas.md  model_card.md
models/: config.json  mlflow.db
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp.ipynb  04_threshold_explore.ipynb
src/: api.py  data_ingestion.py  evaluate.py  features.py  model.py  model_selector.py  train.py
tests/: test_api.py  test_schema.py  test_smoke.py
