[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Projeto-Churn-TC01"
version = "0.1.0"
description = "Churn prediction pipeline com MLP PyTorch — Tech Challenge Fase 1"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.11.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pandera>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
link-mode = "copy"